# test

./: .gitignore  README.md  beam_1d  main.cpp  vfadvda
WI477/: CMakeLists.txt  H-10.cpp  HeatFinalProjectAR.cpp  copy-move.cpp  derivatives.cpp  points-triangles.cpp  swap.cpp  symbolic-differentiation.cpp  templates.cxx  unit-converter.cxx
grokking_algorithms/: binary_search.cpp
